--- a/DynamicLibrary/Threads/Threads.vcxproj
+++ b/DynamicLibrary/Threads/Threads.vcxproj
@@ -100,7 +100,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\Олег\Desktop\диплом\DLL_библиотека\DynamicLibrary\MathFuncsDll</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Олег\Documents\GitHub\DLL_second_thr\DynamicLibrary\MathFuncsDll</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
